...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/edit_text_edit_profile_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
...
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_edit_profile_image" />

    <EditText
        android:id="@+id/edit_text_edit_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
...
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_edit_profile_full_name" />

    <EditText
        android:id="@+id/edit_text_edit_profile_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
...
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_edit_profile_email" />

    <EditText
        android:id="@+id/edit_text_edit_profile_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
...
        app:layout_constraintBottom_toBottomOf="@+id/image_view_edit_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/image_view_edit_profile_image"
        app:layout_constraintStart_toStartOf="@+id/image_view_edit_profile_image"
        app:layout_constraintTop_toTopOf="@+id/image_view_edit_profile_image" />

    <ImageButton
        android:id="@+id/button_edit_profile_save_profile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/edit_profile_save_profile_data"
        android:onClick="saveUserData"
        app:layout_constraintEnd_toEndOf="parent"
...
