<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_home_group">
        <menu>
            <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/drawer_home">
    </item>
            </group>
        </menu>
    </item>


    <item android:title="@string/drawer_activities_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_add_activity"
                    android:icon="@drawable/add"
                    android:title="@string/drawer_add_activity">
                </item>
            </group>
        </menu>
    </item>

    <item android:title="Workouts">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_workouts"
                    android:icon="@drawable/ic_baseline_fitness_center_24"
                    android:title="Workouts">

                </item>
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_settings_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_edit_profile"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/drawer_edit_profile">

                </item>
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_logout_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/drawer_logout">
                </item>
            </group>
        </menu>
    </item>
</menu>