...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/text_view_activity_profile_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/armata"
                                android:text="@string/activity_profile_full_name_hint"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/text_view_activity_profile_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/armata"
                                android:text="@string/activity_profile_email_hint"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/text_view_activity_profile_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/armata"
                                android:text="@string/activity_profile_phone_hint"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/text_view_activity_profile_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/armata"
                                android:text="@string/activity_profile_description_hint"
...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView5"
                                app:layout_constraintTop_toBottomOf="@+id/textView6" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/button_update_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="40dp"
                            android:onClick="goToEditProfileActivity"
                            android:text="@string/activity_profile_icon_modify_account"
...
