...
    <string name="navigation_drawer_close">true</string>
    <string name="navigation_drawer_open">true</string>

    <!-- home screen -->
    <string name="home_record_run">Record Run</string>
    <string name="homeScreenImageDescription">People Running</string>
    <string name="signInButton">Sign In</string>
    <string name="noAccount"><u>Continue without account</u></string>

    <!-- Drawer/Menu -->
    <string name="drawer_activities_group">Activities</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_add_activity">Add Activity</string>
...
